# ihmc_ros_diagnostics

./: CMakeLists.txt  README.md  package.xml
.github/: PULL_REQUEST_TEMPLATE.md
configurations/: behavior_viz.yaml  cameras.yaml  logger.yaml
launch/: ihmc_behavior_visualizer.launch  ihmc_logger.launch  ihmc_sim_diagnostic.launch
scripts/: armDemo1.py  armDemo2.py  armTrajectory.py  boxStep.py
