<?xml version="1.0"?>
<package>
  <name>ihmc_diagnostics</name>
  <version>0.3.2</version>
  <description>The ihmc_diagnostics package provides a collection of tools for analysing the robot controller.</description>

  <maintainer email="bshrewsbury@ihmc.us">The People's Glorious Point of Contact</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://bitbucket.org/ihmcrobotics/ihmc_ros</url>

  <author email="bshrewsbury@ihmc.us">The People's Glorious Author</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ihmc_ros_common</build_depend>
  <build_depend>ihmc_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ihmc_msgs</run_depend>
  <run_depend>ihmc_ros_common</run_depend>

</package>
