<?xml version="1.0"?>
<package>
  <name>ihmc_ros_diagnostics</name>
  <version>0.8.0</version>
  <description>The ihmc_ros_diagnostics package provides a collection of tools for analysing the robot controller.</description>

  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/ihmcrobotics/ihmc_ros_diagnostics</url>

  <author email="dstephen@ihmc.us">Doug Stephen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ihmc_ros_common</build_depend>
  <build_depend>ihmc_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ihmc_msgs</run_depend>
  <run_depend>ihmc_ros_common</run_depend>

</package>
